Add awager auth, bullet, pagy, seed_migration

--- a/env.example
+++ b/env.example
@@ -8,3 +8,6 @@ DATABASE_PASSWORD=namakualam
 DATABASE_HOSTNAME=localhost
 DATABASE_PORT="5433"
 RAILS_MAX_THREADS="5"
+
+DOC_USERNAME="admin"
+DOC_PASSWORD="admin"
