--- a/env.example
+++ b/env.example
@@ -1,13 +1,14 @@
+API_DEBUGGING="true"
 BASE_URL="http://0.0.0.0:3000"
-API_DEBUGGING=true
 
 # database master
-DATABASE_NAME=pokeon_api_development
+DATABASE_NAME=notification_staging
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=namakualam
 DATABASE_HOSTNAME=localhost
 DATABASE_PORT="5433"
 RAILS_MAX_THREADS="5"
 
+# API Doc setting
 DOC_USERNAME="admin"
 DOC_PASSWORD="admin"
