--- a/env.example
+++ b/env.example
@@ -12,3 +12,7 @@ RAILS_MAX_THREADS="5"
 # API Doc setting
 DOC_USERNAME="admin"
 DOC_PASSWORD="admin"
+
+# redis
+REDIS_SERVER_URL: 'redis://127.0.0.1:6379/12'
+REDIS_CLIENT_URL: 'redis://127.0.0.1:6379/12'
