--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,3 +1,7 @@
-:concurrency: 30
+:concurrency: 5
+staging:
+  :concurrency: 10
+production:
+  :concurrency: 20
 :queues:
-  - timeline
+  - ["pemilu", 1]
