--- a/env.example
+++ b/env.example
@@ -6,13 +6,27 @@ DATABASE_NAME=notification_staging
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=namakualam
 DATABASE_HOSTNAME=localhost
-DATABASE_PORT="5433"
-RAILS_MAX_THREADS="5"
+DATABASE_PORT=5433
+RAILS_MAX_THREADS=5
+
+PANTAU_AUTH_RAILS_MAX_THREADS=5
+PANTAU_AUTH_DATABASE_NAME=pemilu_development
+PANTAU_AUTH_DATABASE_USERNAME=
+PANTAU_AUTH_DATABASE_PASSWORD=
+PANTAU_AUTH_DATABASE_HOSTNAME=
+PANTAU_AUTH_DATABASE_PORT=5432
+
+PEMILU_RAILS_MAX_THREADS=5
+PEMILU_DATABASE_NAME=pantau_auth_development
+PEMILU_DATABASE_USERNAME=
+PEMILU_DATABASE_PASSWORD=
+PEMILU_DATABASE_HOSTNAME=localhost
+PEMILU_DATABASE_PORT=5432
 
 # API Doc setting
 DOC_USERNAME="admin"
 DOC_PASSWORD="admin"
 
 # redis
-REDIS_SERVER_URL: 'redis://127.0.0.1:6379/12'
-REDIS_CLIENT_URL: 'redis://127.0.0.1:6379/12'
+REDIS_SERVER_URL='redis://127.0.0.1:6379/12'
+REDIS_CLIENT_URL='redis://127.0.0.1:6379/12'
