--- a/env.example
+++ b/env.example
@@ -6,26 +6,31 @@ DATABASE_NAME=notification_staging
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=namakualam
 DATABASE_HOSTNAME=localhost
-DATABASE_PORT=5433
-RAILS_MAX_THREADS=5
+DATABASE_PORT="5433"
+RAILS_MAX_THREADS="5"
 
-PANTAU_AUTH_RAILS_MAX_THREADS=5
-PANTAU_AUTH_DATABASE_NAME=pemilu_development
-PANTAU_AUTH_DATABASE_USERNAME=
-PANTAU_AUTH_DATABASE_PASSWORD=
-PANTAU_AUTH_DATABASE_HOSTNAME=
-PANTAU_AUTH_DATABASE_PORT=5432
+# database pemilu
+PEMILU_DATABASE_NAME=pantau_pemilu_staging
+PEMILU_DATABASE_USERNAME=pantau_pemilu_ustaging
+PEMILU_DATABASE_PASSWORD=blah
+PEMILU_DATABASE_HOSTNAME=bleh
+PEMILU_DATABASE_PORT="5433"
+PEMILU_RAILS_MAX_THREADS="5"
 
-PEMILU_RAILS_MAX_THREADS=5
-PEMILU_DATABASE_NAME=pantau_auth_development
-PEMILU_DATABASE_USERNAME=
-PEMILU_DATABASE_PASSWORD=
-PEMILU_DATABASE_HOSTNAME=localhost
-PEMILU_DATABASE_PORT=5432
+# database pemilu
+PANTAU_AUTH_DATABASE_NAME=pantau_auth_staging
+PANTAU_AUTH_DATABASE_USERNAME=pantau_auth_ustaging
+PANTAU_AUTH_DATABASE_PASSWORD=blo
+PANTAU_AUTH_DATABASE_HOSTNAME=ble
+PANTAU_AUTH_DATABASE_PORT="5433"
+PANTAU_AUTH_RAILS_MAX_THREADS="5"
 
 # API Doc setting
 DOC_USERNAME="admin"
 DOC_PASSWORD="admin"
+
+# Elastic search
+ELASTICSEARCH_URL = "http://127.0.0.1:9200"
 
 # redis
 REDIS_SERVER_URL='redis://127.0.0.1:6379/12'
