--- a/env.example
+++ b/env.example
@@ -35,3 +35,9 @@ ELASTICSEARCH_URL = "http://127.0.0.1:9200"
 # redis
 REDIS_SERVER_URL='redis://127.0.0.1:6379/12'
 REDIS_CLIENT_URL='redis://127.0.0.1:6379/12'
+
+# SNEAKERS
+RABBITMQ_URL='amqp://guest:guest@localhost:5672'
+SNEAKERS_WORKERS_COUNT=3
+SNEAKERS_LOG_FILE="./log/sneakers.log"
+SNEAKERS_PID_FILE="./tmp/pids/sneakers.pid"
