Add loger, add carierwave add bagge model.

--- a/env.example
+++ b/env.example
@@ -41,3 +41,8 @@ RABBITMQ_URL='amqp://guest:guest@localhost:5672'
 SNEAKERS_WORKERS_COUNT=3
 SNEAKERS_LOG_FILE="./log/sneakers.log"
 SNEAKERS_PID_FILE="./tmp/pids/sneakers.pid"
+
+# AWS
+AWS_KEY_ID="blahe"
+AWS_KEY_SECRET="olehe"
+AWS_BUCKET_NAME="pantau-test"
