--- a/config/pemilu_database.yml
+++ b/config/pemilu_database.yml
@@ -7,6 +7,7 @@ default: &default
   password: <%= ENV["PEMILU_DATABASE_PASSWORD"] %>
   host: <%= ENV['PEMILU_DATABASE_HOSTNAME'] %>
   port: <%= ENV['PEMILU_DATABASE_PORT'].to_i %>
+  timeout: <%= ENV.fetch("PEMILU_DATABASE_TIMEOUT") { 5000 } %>
 
 development:
   <<: *default
