--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ default: &default
   password: <%= ENV["DATABASE_PASSWORD"] %>
   host: <%= ENV['DATABASE_HOSTNAME'] %>
   port: <%= ENV['DATABASE_PORT'].to_i %>
-  timeout: <%= ENV.fetch("DATABASE_TIMEOUT") { 5000 } %>
+  timeout: <%= ENV.fetch("DATABASE_TIMEOUT") { 5000 }.to_i %>
 
 development:
   <<: *default
