Add Wordstadium connection. Add wordstadium subscribe.

--- a/env.example
+++ b/env.example
@@ -25,6 +25,15 @@ PANTAU_AUTH_DATABASE_HOSTNAME=ble
 PANTAU_AUTH_DATABASE_PORT="5433"
 PANTAU_AUTH_RAILS_MAX_THREADS="5"
 
+# database word stadium
+WORDSTADIUM_DATABASE_NAME=ws_service_staging
+WORDSTADIUM_DATABASE_USERNAME=ws_service_ustaging
+WORDSTADIUM_DATABASE_PASSWORD=blo
+WORDSTADIUM_DATABASE_HOSTNAME=ble
+WORDSTADIUM_DATABASE_PORT=5432
+WORDSTADIUM_RAILS_MAX_THREADS=10
+WORDSTADIUM_DATABASE_TIMEOUT=10000
+
 # API Doc setting
 DOC_USERNAME="admin"
 DOC_PASSWORD="admin"
