--- a/.editorconfig
+++ b/.editorconfig
@@ -1,18 +1,15 @@
-root = true
-
 [*]
 charset=utf-8
 end_of_line=lf
-insert_final_newline=true
+insert_final_newline=false
 indent_style=space
-indent_size=2
-trim_trailing_whitespace=true
+indent_size=4
 
 [{*.jhm,*.xslt,*.xul,*.rng,*.xsl,*.xsd,*.ant,*.tld,*.fxml,*.jrxml,*.xml,*.jnlp,*.wsdl}]
 indent_style=space
 indent_size=2
 
-[{.babelrc,.stylelintrc,.eslintrc,jest.config,*.json,*.jsb3,*.jsb2,*.bowerrc}]
+[{.babelrc,.stylelintrc,jest.config,.eslintrc,*.json,*.jsb3,*.jsb2,*.bowerrc}]
 indent_style=space
 indent_size=2
 
@@ -20,7 +17,7 @@ indent_size=2
 indent_style=space
 indent_size=2
 
-[{rcov,spec,rake,cucumber,rails,spork,capfile,gemfile,rakefile,guardfile,isolate,vagrantfile,Puppetfile,*.gemspec,*.jbuilder,*.rbw,*.thor,*.ru,*.rb,*.rake}]
+[{rcov,rails,cucumber,spork,spec,rake,capfile,gemfile,rakefile,guardfile,isolate,vagrantfile,Puppetfile,*.gemspec,*.jbuilder,*.thor,*.rbw,*.ru,*.rb,*.rake}]
 indent_style=space
 indent_size=2
 
@@ -28,17 +25,7 @@ indent_size=2
 indent_style=space
 indent_size=2
 
-[*.haml]
-indent_style=space
-indent_size=2
-
-[*.slim]
-indent_style=space
-indent_size=2
-
 [{*.yml,*.yaml}]
 indent_style=space
 indent_size=2
 
-[*.md]
-trim_trailing_whitespace=false
